falta exclusivos pc

--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/ANIMAL CROSSING.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/ANIMAL CROSSING.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJN">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -67,8 +67,8 @@
             <img class="img" src="../img/NINTENDO/animal-crossing.jpg" alt="sin imagen"><H3 class="letraVJ">ANIMAL CROSSING</H3>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar , letraVJ">Descripcion</h2><br>
-            <p class="centrar , letraVJ">Animal Crossing es un videojuego de simulación social y de vida que Nintendo ha descrito como un «juego de comunicación».
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
+            <p class="centrar letraVJ">Animal Crossing es un videojuego de simulación social y de vida que Nintendo ha descrito como un «juego de comunicación».
                  El personaje vive una vida en la que el usuario decide qué hacer, como cumplir las tareas propuestas por los vecinos (que no son obligatorias). 
                  Los jugadores asumen el rol de un nuevo vecino que se acaba de mudar al pueblo. El género y la cara del personaje depende de las respuestas que se le den a las preguntas de un gato llamado Fran, el cual nos encontramos en el tren en el que el personaje viaja al pueblo.</p>
             </div></div>
