--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/ARMS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/ARMS.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJN">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/NINTENDO/ARMS.jpg" alt="sin imagen"><H2>ARMS</H2>
+            <img class="img" src="../img/NINTENDO/ARMS.jpg" alt="sin imagen"><H2 class="letraVJ">ARMS</H2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">ARMS es un juego de combate para Nintendo Switch que parece situarse en la tradición de Punch-Out con una estética desenfadada y futurista. 
                 Los puños de los luchadores están unidos a su cuerpo por unos muelles que permiten atacar a distancia en el cuadrilatero. Gracias a su innovador control, 
                 diseñado para sacarle partido a los Joy-Con, se nos ofrecerá la posibilidad de encadenar golpes, desplazarnos por los escenarios de combate y lanzar ataques a distancia. </p>
@@ -76,15 +76,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° Nintendo Switch </p>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° Nintendo Switch </p>
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=NIHR2QSJrPY" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://www.nintendo.com/es-cl/store/products/arms-switch/" target="_blank">
                     <img src="../img/NINTENDO/nintendo.jpg" alt="Juego Nintendo" class="logoY"></a></p>
             </div>
