--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/BAYONETTA 2.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/BAYONETTA 2.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJN">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/NINTENDO/bayonetta-2.jpg" alt="sin imagen"><H2>BAYONETTA 2</H2>
+            <img class="img" src="../img/NINTENDO/bayonetta-2.jpg" alt="sin imagen"><H2 class="letraVJ">BAYONETTA 2</H2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">La bruja más poderosa, provocativa y sexy vuelve, en esta ocasión a Nintendo Switch, para demostrar que sigue sin haber enemigo demoníaco que la haga perder la paciencia o que pueda con ella. Únete a Bayonetta en esta nueva aventura y usa sus poderes, sus invocaciones e increíbles combos para avanzar con estilo a lo largo de los niveles. 
                 En esta secuela del aclamado juego de acción Bayonetta, los jugadores estarán al borde de un ataque de nervios de principio a fin. Un juego de acción cargado de alucinantes batallas y bellas escenas cinemáticas. Lucha sobre un avión en pleno ascenso; pelea contra un gigantesco y angelical monstruo con un brazo que es un látigo capaz de matar sobre un tren a toda velocidad; y asciende a los cielos para enfrentarte a un dragón demoníaco en lo alto de un rascacielos. </p>
             </div></div>
@@ -75,15 +75,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° Nintendo Switch </p>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° Nintendo Switch </p>
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=egZeoGRqPqs" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://www.nintendo.com/es-cl/store/products/bayonetta-2-switch/" target="_blank">
                     <img src="../img/NINTENDO/nintendo.jpg" alt="Juego Nintendo" class="logoY"></a></p>
             </div>
