--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/DONKEY KONG COUNTRY.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/DONKEY KONG COUNTRY.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJN">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/NINTENDO/Donkey kong country.webp" alt="sin imagen"><H4>DONKEY KONG COUNTRY</H4>
+            <img class="img" src="../img/NINTENDO/Donkey kong country.webp" alt="sin imagen"><H4 class="letraVJ">DONKEY KONG COUNTRY</H4>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Donkey Kong Country es un videojuego desarrollado por la compañía Rare y distribuida por Nintendo, que incluye la descendencia del popular personaje de videojuegos, 
                 Donkey Kong. Éste fue lanzado para la videoconsola SNES y Super Famicom en 1994. El juego fue lanzado en Japón bajo el título "Super Donkey Kong". 
                 Fue lanzado simultáneamente en todo el mundo y fue un juego realmente revolucionario por sus excepcionales gráficos en una máquina de tan sólo 16 bits.
@@ -78,15 +78,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° Nintendo Switch </p>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° Nintendo Switch </p>
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=Or5HB1Lo8b0" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://www.nintendo.com/es-cl/store/products/donkey-kong-country-tropical-freeze-switch/" target="_blank">
                     <img src="../img/NINTENDO/nintendo.jpg" alt="Juego Nintendo" class="logoY"></a></p>
             </div>
