--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/FIRE EMBLEM WARRIORS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/FIRE EMBLEM WARRIORS.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJN">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/NINTENDO/fire_emblem_warriors.jpg" alt="sin imagen"><H4>FIRE EMBLEM WARRIORS</H4>
+            <img class="img" src="../img/NINTENDO/fire_emblem_warriors.jpg" alt="sin imagen"><H4 class="letraVJ">FIRE EMBLEM WARRIORS</H4>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">El reino de Aytolis lleva un largo periodo sin rey debido a que el último murió de una enfermedad y sus hijos, Rowan y Lianna,
                  se niegan a heredar el trono. Sin embargo, el reino ha podido sobrellevar esta adversidad gracias a la ayuda ofrecida por el reino de Gristonne. 
                  Los príncipes, gemelos, no habían vivido más que una larga era de paz, pero repentinamente unos monstruos procedentes de otra dimensión aparecieron para hacerse con el poder del reino por la fuerza y separaron a estos de su madre, Yelena.
@@ -77,15 +77,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° Nintendo Switch </p>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° Nintendo Switch </p>
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=9ZKShA5vFoA" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://www.nintendo.com/es-cl/store/products/fire-emblem-warriors-switch/" target="_blank">
                     <img src="../img/NINTENDO/nintendo.jpg" alt="Juego Nintendo" class="logoY"></a></p>
             </div>
