--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/STORY OF SEASONS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/STORY OF SEASONS.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJN">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/NINTENDO/STORY OF SEASONS.jpg" alt="sin imagen"><H3>STORY OF SEASONS</H3>
+            <img class="img" src="../img/NINTENDO/STORY OF SEASONS.jpg" alt="sin imagen"><H3 class="letraVJ">STORY OF SEASONS</H3>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ"> Story of Seasons es una saga que emula una vida en la granja y que, al mismo tiempo, abraza la simulación social. 
                 Ninguno de sus capítulos llega a tener la profundidad de Farm Simulator o Los Sims en sus respectivas áreas pero
                  entretienen tanto o más que ambos juntos. Su desenfadado aspecto o la sencillez de algunas de sus rutinas —aunque no siempre es así—
@@ -80,15 +80,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° Nintendo Switch </p>
+                <H class="letraVJ"2>Plataformas</H2><br>
+                <p class="letraVJ">° Nintendo Switch </p>
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=XsoJi2fXOdI" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://www.nintendo.com/store/products/story-of-seasons-pioneers-of-olive-town-switch/" target="_blank">
                     <img src="../img/NINTENDO/nintendo.jpg" alt="Juego Nintendo" class="logoY"></a></p>
             </div>
