--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/SUPER SMASH BROS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/SUPER SMASH BROS.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJN">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -56,7 +56,8 @@
               <button class="btn btn-outline-success my-2 my-sm-0 , cuN1" type="submit"><img src="../img/CURSOR/lupa.png"  alt="sin imagen" class="img"></button>
             </form>
           </div>
-        </nav></div>
+        </nav>
+      </div>
 
     <div class="container">
         
@@ -64,10 +65,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/NINTENDO/Super-smash-bros.jpg" alt="sin imagen"><H3>SUPER SMASH BROS</H3>
+            <img class="img" src="../img/NINTENDO/Super-smash-bros.jpg" alt="sin imagen"><H3 class="letraVJ">SUPER SMASH BROS</H3>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Super Smash Bros. Ultimate es un videojuego crossover de lucha desarrollado por Bandai Namco Studios y Sora Ltd. y publicado 
                 por Nintendo para la consola Nintendo Switch. Se trata de la quinta entrega de la serie Super Smash Bros, sucediendo a Super Smash Bros.
                  para Nintendo 3DS y Wii U, cuyo lanzamiento se produjo el 7 de diciembre de 2018. El videojuego sigue el estilo tradicional de la saga: 
@@ -80,20 +81,21 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° Nintendo Switch </p>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° Nintendo Switch </p>
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=tqSY9mlmWIs" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://www.nintendo.com/es-cl/store/products/super-smash-bros-ultimate-switch/" target="_blank">
                     <img src="../img/NINTENDO/nintendo.jpg" alt="Juego Nintendo" class="logoY"></a></p>
             </div>
         </div>
-        <br><br><br><div class="row">
+        <br><br><br>
+        <div class="row">
             <div class="col"><form action="/action_page.php">
                 <textarea class="cu1" name="message" rows="5" cols="140"></textarea>
                 
