--- a/PROYECTO SEMESTRAL/Exclusivo Play/DEMOS'N SOULS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/DEMOS'N SOULS.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJP">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PLAYSTATION/demons souls.jpeg" alt="sin imagen"><h2>DEMOS'N SOULS</h2>
+            <img class="img" src="../img/PLAYSTATION/demons souls.jpeg" alt="sin imagen"><h2 class="letraVJ">DEMOS'N SOULS</h2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Demon's Souls  es un juego de rol de acción de 2009 desarrollado por FromSoftware para PlayStation 3, pero ahora optimizado para PlayStation 5 bajo la supervisión de Japan Studio .
                  Fue publicado en Japón por Sony Computer Entertainment en febrero, en Norteamérica por Atlus USA en octubre y en los territorios PAL por
                   Namco Bandai Partners en junio de 2010. El juego se conoce como el sucesor espiritual de la serie King's Field de FromSoftware
@@ -81,16 +81,16 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° PlayStation 5 </p>
-                <P>° PlayStation 4 </P>
-                <P>° PlayStation 3 </P>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° PlayStation 5 </p>
+                <P class="letraVJ">° PlayStation 4 </P>
+                <P class="letraVJ">° PlayStation 3 </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=2TMs2E6cms4" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar " ><a href="https://store.playstation.com/es-cl/concept/10000368" target="_blank">
                     <img src="../img/PLAYSTATION/logoplay.jpg" alt="Juego Play" class="logoY"></a></p>
             </div>
