--- a/PROYECTO SEMESTRAL/Exclusivo Play/GOD OF WAR RAGNAROK.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/GOD OF WAR RAGNAROK.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJP">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PLAYSTATION/GOD OF WAR RAGNAROK.jpeg" alt="sin imagen"><h2>GOD OF WAR RAGNAROK</h2>
+            <img class="img" src="../img/PLAYSTATION/GOD OF WAR RAGNAROK.jpeg" alt="sin imagen"><h2 class="letraVJ">GOD OF WAR RAGNAROK</h2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">God of War Ragnarök es un videojuego de acción y aventuras desarrollado por Santa Monica Studio y publicado por Sony Interactive Entertainment (SIE).
                  Se lanzó en todo el mundo el 9 de noviembre de 2022 para PlayStation 4 y PlayStation 5, lo que marca el primer lanzamiento entre generaciones de la 
                  serie. Es la novena entrega de la saga de God of War, la novena cronológicamente y la secuela de God of War de 2018. Basado libremente en la mitología
@@ -83,15 +83,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° PlayStation 5 </p>
-                <P>° PlayStation 4 </P>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° PlayStation 5 </p>
+                <P class="letraVJ">° PlayStation 4 </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=F3jePdO9_jc" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar " ><a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwj43Iuq3ff9AhUJQUgAHWcfDPgYABAEGgJjZQ&ohost=www.google.com&cid=CAESauD2ViA-8MO9AlWDJc-xJVN5My0mJdJ89MBzttaETWCGfwiblRenwpSJeTapO6ZRckUXF58qZUeQpH2pgr6UoBB-RjIjKfRCc1aV4u3QW-Bv9_BgpZ9RxtR-IPF7muNM_LTxBc5bpC46u84&sig=AOD64_05iFUF_fKEXMMEelsD8HbOX0iD0w&q&adurl&ved=2ahUKEwibgoSq3ff9AhVMF7kGHUiPCusQ0Qx6BAgKEAE" target="_blank">
                     <img src="../img/PLAYSTATION/logoplay.jpg" alt="Juego Play" class="logoY"></a></p>
             </div>
