--- a/PROYECTO SEMESTRAL/Exclusivo Play/GOD OF WAR.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/GOD OF WAR.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJP">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PLAYSTATION/god of war.jpeg" alt="sin imagen"><h2>GOD OF WAR</h2>
+            <img class="img" src="../img/PLAYSTATION/god of war.jpeg" alt="sin imagen"><h2 class="letraVJ">GOD OF WAR</h2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ"> Las armas principales de Kratos durante todo el videojuego son un hacha llamada "Leviathan" y un escudo.
                  El Leviathan se puede lanzar para golpear o congelar a ciertos rivales, y regresará a la mano del personaje al oprimir un botón.
                   Mientras que el escudo se utiliza tanto para retener y contraatacar golpes como para atacar a los enemigos durante el combate. Esta vez los saltos
@@ -83,15 +83,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° PlayStation 5 </p>
-                <P>° PlayStation 4 </P>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° PlayStation 5 </p>
+                <P class="letraVJ">° PlayStation 4 </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=vtFhDrMIZjE" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar " ><a href="https://www.playstation.com/es-cl/games/god-of-war/" target="_blank">
                     <img src="../img/PLAYSTATION/logoplay.jpg" alt="Juego Play" class="logoY"></a></p>
             </div>
