--- a/PROYECTO SEMESTRAL/Exclusivo Play/KINGDOMS OF AMALUR.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/KINGDOMS OF AMALUR.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJP">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -59,25 +59,14 @@
         </nav></div>
 
     <div class="container">
-        <div class=" row">
-            <div class="col-md-12 col-sm-12">
-                <ul>
-                    <li><a class="active" href="../Pantalla.html">Inicio</a></li>
-                    <li><a href="../Exclusivo Xbox/xbox.html">XBOX</a></li>
-                    <li><a href="../Exclusivo Play/playstation.html">PLAYSTATION</a></li>
-                    <li><a href="../Exclusivo Nintendo/nintendo.html">NINTENDO</a></li>
-                    <li><a href="../Exclusivo PC/pc.html">PC</a></li>
-                </ul>
-            </div>
-        </div>
         <br><br>
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PLAYSTATION/kingdoms of amalur.jpeg" alt="sin imagen"><h2>KINKDOMS OF AMALUR</h2>
+            <img class="img" src="../img/PLAYSTATION/kingdoms of amalur.jpeg" alt="sin imagen"><h2 class="letraVJ">KINKDOMS OF AMALUR</h2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Kingdom of Amalur: Reckoning es la remasterización del videojuego de rol creado por
                  grandes nombres de la fantasía, el novelista R.A. Salvatore, el creador de Spawn Todd McFarlane y el 
                  diseñador de The Elder Scrolls IV: Oblivion, Ken Rolston. El videojuego nos invitará a viajar a deun mundo 
@@ -88,15 +77,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° PlayStation 5 </p>
-                <P>° PlayStation 4 </P>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° PlayStation 5 </p>
+                <P class="letraVJ">° PlayStation 4 </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=bowKERo9Lq8" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar " ><a href="https://store.playstation.com/es-cl/product/UP4389-CUSA17271_00-KOARECKONINGDEUS?gclid=Cj0KCQjwt_qgBhDFARIsABcDjOc6StV1YfkIztwvxZDzwW3-2LsFq-Y6TQrAl0DMgB9AVFadKiU91QMaArFiEALw_wcB&gclsrc=aw.ds" target="_blank">
                     <img src="../img/PLAYSTATION/logoplay.jpg" alt="Juego Play" class="logoY"></a></p>
             </div>
