--- a/PROYECTO SEMESTRAL/Exclusivo Play/THE SURGE 2.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/THE SURGE 2.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJP">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PLAYSTATION/the surge 2.jpeg" alt="sin imagen"><h2>THE SURGE 2</h2>
+            <img class="img" src="../img/PLAYSTATION/the surge 2.jpeg" alt="sin imagen"><h2 class="letraVJ">THE SURGE 2</h2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">The Surge 2 es un videojuego de rol de acción jugado desde una perspectiva en tercera persona.
                  El videojuego presenta a un creador de personajes que permite a los jugadores personalizar las apariencias y el género de su 
                  avatar de jugador. Los jugadores pueden utilizar una variedad de armas cuerpo a cuerpo para derrotar a los enemigos, cuyas 
@@ -83,15 +83,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° PlayStation 5 </p>
-                <P>° PlayStation 4 </P>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° PlayStation 5 </p>
+                <P class="letraVJ">° PlayStation 4 </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=7QtiyEw-V4M" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar " ><a href="https://store.playstation.com/es-cl/product/UP4133-CUSA12564_00-0000000THESURGE2?gclid=Cj0KCQjwt_qgBhDFARIsABcDjOcWvCe-6vthKwmZ414XR_rhuwy6B1i2sFLO-Jow8Ym1sgmytQpbEw8aAusWEALw_wcB&gclsrc=aw.ds" target="_blank">
                     <img src="../img/PLAYSTATION/logoplay.jpg" alt="Juego Play" class="logoY"></a></p>
             </div>
