--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/DESTINY.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/DESTINY.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJX">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/DESTINY.jpg" alt="sin imagen"><H2>DESTINY</H2>
+            <img class="img" src="../img/XBOX/DESTINY.jpg" alt="sin imagen"><H2 class=" letraVJ">DESTINY</H2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Destiny es un videojuego de disparos en primera persona, en forma de multijugador masivo en línea en un mundo abierto de ficción especulativa.
                  Fue desarrollado por Bungie y publicado por Activision como parte de un contrato de producción de diez años. Se lanzó a nivel mundial el 9 de septiembre de 2014. 
                  Según las empresas desarrolladoras, los costos de desarrollo y marketing superaron los 500 millones de dólares, pero no precisaron las cifras definitivas,
@@ -78,16 +78,16 @@
         <br>
         <div class="row">
             <div class="col-md-4 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° XBOX SERIES </p>
-                <p>° XBOX ONE</p>
-                <P>° XBOX 360 </P>
+                <H2 class=" letraVJ">Plataformas</H2><br>
+                <p class=" letraVJ">° XBOX SERIES </p>
+                <p class=" letraVJ">° XBOX ONE</p>
+                <P class=" letraVJ">° XBOX 360 </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class=" letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=TDusDNo7zfM" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-8 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br><br>
                 <p class="centrar" ><a href="https://www.xbox.com/es-CL/games/store/destiny/c2jqrc2c49b0" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
