--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/FORZA MOTORSPORT 5.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/FORZA MOTORSPORT 5.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJX">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/forza motorsport.jpeg" alt="sin imagen"><H4>FORZA MOTORSPORT</H4>
+            <img class="img" src="../img/XBOX/forza motorsport.jpeg" alt="sin imagen"><H4 class=" letraVJ">FORZA MOTORSPORT</H4>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Forza Motorsport 5 es un salto natural de la saga a la nueva generación, tal y como fue la segunda parte, aparecida en 2007 en Xbox 360. Aprovecha la potencia de Xbox One para mostrarnos unos coches mejor modelados y más espectaculares que nunca,
                  tanto por dentro como por fuera, y unos escenarios llenos de detalles, además de unos efectos visuales más vistosos. En este sentido, Forza Motorsport es el juego más llamativo de la nueva consola. No tiene esa épica y espectacularidad de Ryse, pero sí un acabado impecable,
                   con un motor gráfico que se mueve a la perfección, resolución 1080p y 60 fotogramas por segundo para transmitir una gran sensación de velocidad cuando juguemos con la vista en primera persona.
@@ -77,15 +77,15 @@
         <br>
         <div class="row">
             <div class="col-md-4 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° XBOX SERIES </p> 
-                <P>° XBOX ONE </P>
+                <H2 class=" letraVJ">Plataformas</H2><br>
+                <p class=" letraVJ">° XBOX SERIES </p> 
+                <P class=" letraVJ">° XBOX ONE </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class=" letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=YLcjfALaQh0" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-8 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br><br>
                 <p class="centrar" ><a href="https://www.xbox.com/es-ES/games/store/forza-motorsport-5/bqlk685tm311" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
