--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS OF WAR 3.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS OF WAR 3.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJX">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/GEARS OF WAR 3.jpg" alt="sin imagen"><H2>GEARS OF WAR 3</H2>
+            <img class="img" src="../img/XBOX/GEARS OF WAR 3.jpg" alt="sin imagen"><H2 class=" letraVJ">GEARS OF WAR 3</H2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Gears of War 3 es el tercer videojuego de la Serie Gears of War, desarrollado por Epic Games y distribuido por Microsoft Studios como exclusiva para la consola Xbox 360 el 20 de septiembre de 2011.
                  Al igual que sus predecesores, se trata de un juego de disparos en tercera persona, basado en un sistema de coberturas.Esta entrega marca el final de la trilogía protagonizada por Marcus Fenix,
                   en la cual tanto la Horda Locust como la humanidad se ven diezmados por el auge de la especie Lambent. Gears of War 3 toma lugar 18 meses después de los acontecimientos culminantes de Gears of War 2, el Hundimiento de Jacinto, 
@@ -77,16 +77,16 @@
         <br>
         <div class="row">
             <div class="col-md-4 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° XBOX SERIES </p>
-                <p>° XBOX ONE</p>
-                <P>° XBOX 360</P>
+                <H2 class=" letraVJ">Plataformas</H2><br>
+                <p class=" letraVJ">° XBOX SERIES </p>
+                <p class=" letraVJ">° XBOX ONE</p>
+                <P class=" letraVJ">° XBOX 360</P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class=" letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=3urAUG9Jyo8" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-8 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br><br>
                 <p class="centrar" ><a href="https://www.xbox.com/es-CO/games/store/gears-of-war-3/bpkdqssfq9wv" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
