--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/LEFT 4 DEAD.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/LEFT 4 DEAD.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJX">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/LEFT 4 DEAD.jfif" alt="sin imagen"><H2>LEFT 4 DEAD 2</H2>
+            <img class="img" src="../img/XBOX/LEFT 4 DEAD.jfif" alt="sin imagen"><H2 class=" letraVJ">LEFT 4 DEAD 2</H2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Left 4 Dead 2 es un videojuego de disparos en primera persona de tipo acción creado por la compañía Valve. Corresponde a la secuela de Left 4 Dead y se lanzó al mercado el 17 de noviembre de 2009 en Estados Unidos y Latinoamérica.
                  En Europa llegó tres días después, el 20 de noviembre. El 14 de diciembre de 2009 fue anunciado el primer contenido descargable para esta secuela: una nueva campaña llamada "Defunción", que se desarrolla entre las dos primeras campañas del juego. Aquí se reúnen los protagonistas del primer Left 4 Dead (Francis, Louis y Zoey) con los supervivientes de esta secuela.
                   Bill no aparece con vida, ya que se sacrificó para que los demás siguieran a salvo. Salió a la luz el 22 de abril de 2010. El juego cuenta con los cuatro modos de su predecesor: el Un jugador (en el que se juega un solo jugador), el Campaña (en el que se juega en línea con otros jugadores), el Enfrentamiento (podemos jugar como infectados) y el Supervivencia (en el que hay que sobrevivir el mayor tiempo posible). </p>
@@ -76,16 +76,16 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° XBOX SERIES </p>
-                <p>° XBOX ONE</p>
-                <P>° XBOX 360</P>
+                <H2 class=" letraVJ">Plataformas</H2><br>
+                <p class=" letraVJ">° XBOX SERIES </p>
+                <p class=" letraVJ">° XBOX ONE</p>
+                <P class=" letraVJ">° XBOX 360</P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class=" letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=OqUUfwSN-MY" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br><br>
                 <p class="centrar" ><a href="https://www.xbox.com/es-CL/games/store/left-4-dead-2/bwvzhjn0g3c3" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
