--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/NO MANS SKY.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/NO MANS SKY.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJX">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/NO MANS SKY.jpeg" alt="sin imagen"><H2>NO MANS SKY</H2>
+            <img class="img" src="../img/XBOX/NO MANS SKY.jpeg" alt="sin imagen"><H2 class=" letraVJ">NO MANS SKY</H2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ"> No Man's Sky, anteriormente denominado Project Skyscraper,[1] es un juego de ciencia ficción procedural desarrollado por el desarrollador inglés Hello Games de Guildford, 
                 Reino Unido. Hello Games es mejor conocido por su serie Joe Danger, y trajo su estilo de desarrollo único a No Man's Sky. El juego presenta exploración planetaria, océanos profundos,
                  batallas espaciales, depredadores y presas, y mucho más en varios mundos generados por generación procedural. Cada mundo tiene sus propios ecosistemas, recompensas y peligros, 
@@ -77,15 +77,15 @@
         <br>
         <div class="row">
             <div class="col-md-4 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° XBOX SERIES </p> 
-                <P>° XBOX ONE </P>
+                <H2 class=" letraVJ">Plataformas</H2><br>
+                <p class=" letraVJ">° XBOX SERIES </p> 
+                <P class=" letraVJ">° XBOX ONE </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class=" letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=ifZA6IMeLs8" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-8 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br><br>
                 <p class="centrar" ><a href="https://www.xbox.com/es-CL/games/store/no-mans-sky/bqvqtl3pch05" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
