--- a/PROYECTO SEMESTRAL/ver perfil.html
+++ b/PROYECTO SEMESTRAL/ver perfil.html
@@ -75,7 +75,7 @@
                       <div class="flip-card-back">
                         <br><h4 class="letraLo , cu">Alvaro Hernandez</h4> 
                         <h5><p class="letraLo , cu">alvarito.her@gmail.com</p></h5>
-                        <h5<p class="letraLo , cu">  ********123</p> </h5>
+                        <h5><p class="letraLo , cu">  ********123</p> </h5>
                         <h5><p class="letraLo , cu">956742347</p></h5>
                         <h5><p class="letraLo , cu">24 años</p></h5>
                         <h5><p class="letraLo , cu">25, agosto 1998</p></h5>
