--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/MARIO KART 8.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/MARIO KART 8.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJN">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/NINTENDO/mario-kart-8-deluxe.webp" alt="sin imagen"><H2>MARIO KART 8</H2>
+            <img class="img" src="../img/NINTENDO/mario-kart-8-deluxe.webp" alt="sin imagen"><H2 class="letraVJ">MARIO KART 8</H2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Mario Kart 8 Deluxe es un juego imprescindible. Unas carreras emocionantes que sacan partido a la arquitectura única de Nintendo Switch y 
                 que estallan en el modo multijugador... siempre que no tengamos la versión de Wii U, que aparte de 6 nuevos corredores, algunos objetos y los modos batalla,
                  es idéntica. Nintendo Switch es una consola diseñada para juegos como Mario Kart 8 Deluxe. A medida que realizábamos este análisis, nos dábamos cuenta de cómo 
@@ -79,15 +79,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° Nintendo Switch </p>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° Nintendo Switch </p>
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=tKlRN2YpxRE" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://www.nintendo.com/es-cl/store/products/mario-kart-8-deluxe-switch/" target="_blank">
                     <img src="../img/NINTENDO/nintendo.jpg" alt="Juego Nintendo" class="logoY"></a></p>
             </div>
