--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/MARIO Y SONIC TOKIO.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/MARIO Y SONIC TOKIO.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJN">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/NINTENDO/mario-y-sonic-jjoo-tokio.jpg" alt="sin imagen"><H3>MARIO Y SONIC JJOO</H3>
+            <img class="img" src="../img/NINTENDO/mario-y-sonic-jjoo-tokio.jpg" alt="sin imagen"><H3 class="letraVJ">MARIO Y SONIC JJOO</H3>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ"> Un año más, Mario y Sonic regresan a los Juegos Olímpicos para traernos toda la acción de los deportes, en esta ocasión a Nintendo Switch.
                  Mario & Sonic en los Juegos Olímpicos: Tokio 2020 es la primera entrega de la serie que llega a la consola híbrida y llega cargada de contenidos
                   para poder pasar grandes ratos con Mario, Sonic y compañía. Si bien muchos de vosotros ya estaréis familiarizados con el estilo de juego de las entregas de
@@ -78,15 +78,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° Nintendo Switch </p>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° Nintendo Switch </p>
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=ewZJbR5lK3c" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://www.nintendo.es/Juegos/Juegos-de-Nintendo-Switch/Mario-Sonic-en-los-Juegos-Olimpicos-Tokio-2020-1575303.html" target="_blank">
                     <img src="../img/NINTENDO/nintendo.jpg" alt="Juego Nintendo" class="logoY"></a></p>
             </div>
