--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/METROID.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/METROID.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJN">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/NINTENDO/Metroid prime.jpg" alt="sin imagen"><H2>METROID</H2>
+            <img class="img" src="../img/NINTENDO/Metroid prime.jpg" alt="sin imagen"><H2 class="letraVJ">METROID</H2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Metroid Prime (メトロイドプライム, Metoroido Puraimu) es un juego de acción aventura en primera persona desarrollado por Retro Studios
                  y lanzado por Nintendo para la consola Nintendo GameCube. Es el primer juego de la saga en estar en completo 3D y también el primero 
                  en tener un modo de juego en primera persona. Metroid Prime marcó el inició de un nuevo estilo de juego para la serie Metroid, siendo
@@ -81,15 +81,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° Nintendo Switch </p>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° Nintendo Switch </p>
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=PW4a7ZvqRaw" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://www.nintendo.com/es-cl/store/products/metroid-prime-remastered-switch/" target="_blank">
                     <img src="../img/NINTENDO/nintendo.jpg" alt="Juego Nintendo" class="logoY"></a></p>
             </div>
