--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/MONSTER HUNTER RISE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/MONSTER HUNTER RISE.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJN">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/NINTENDO/MONSTER HUNTER RISE.webp" alt="sin imagen"><H4>MONSTER HUNTER RISE</H4>
+            <img class="img" src="../img/NINTENDO/MONSTER HUNTER RISE.webp" alt="sin imagen"><H4 class="letraVJ">MONSTER HUNTER RISE</H4>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">A finales de 2017 Capcom sorprendió al mundo con Monster Hunter World, la que hasta el momento era la última entrega de la serie.
                  Casi cuatro años después se ha convertido en el juego más vendido de la franquicia, pero desde Japón tenían que llegar a otros
                   territorios. Para eso llega Monster Hunter Rise. ¿Su objetivo? Trasladar las increíbles sensaciones de su predecesor, pero ahora
@@ -84,15 +84,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° Nintendo Switch </p> 
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° Nintendo Switch </p> 
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=LbrpBkL-VEI" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://www.nintendo.com/es-cl/store/products/monster-hunter-rise-switch/" target="_blank">
                     <img src="../img/NINTENDO/nintendo.jpg" alt="Juego Nintendo" class="logoY"></a></p>
             </div>
