--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/POKEMON LETS GO PIKACHU.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/POKEMON LETS GO PIKACHU.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJN">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/NINTENDO/pokemon-lets-go-pikachu.jpg" alt="sin imagen"><H4>POKEMON LEST GO PIKACHU</H4>
+            <img class="img" src="../img/NINTENDO/pokemon-lets-go-pikachu.jpg" alt="sin imagen"><H4 class="letraVJ">POKEMON LEST GO PIKACHU</H4>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ"> 'Pokémon Let's Go! Pikachu' es una reimaginación del clásico de primera generación 'Pokémon Amarillo' para Nintendo Switch.
                  No se trata de un remake, pues contará con novedades con respecto a la primera entrega y narrará una historia inédita hasta la fecha.
                   'Pokémon Let's Go! Pikachu' nos devolverá a la región de Kanto para hacernos con las 151 criaturas originales, exclusivamente.
@@ -82,15 +82,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° Nintendo Switch </p> 
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° Nintendo Switch </p> 
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=lmyH1GKLGvI" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://www.nintendo.com/es-cl/store/products/pokemon-lets-go-pikachu-switch/" target="_blank">
                     <img src="../img/NINTENDO/nintendo.jpg" alt="Juego Nintendo" class="logoY"></a></p>
             </div>
