--- a/PROYECTO SEMESTRAL/Exclusivo Play/BATMAN_ARKHAM_KNIGHT.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/BATMAN_ARKHAM_KNIGHT.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJP">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -63,10 +63,10 @@
         <br><br>
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PLAYSTATION/batman arkham knight.jpeg" alt="sin imagen"><h4>BATMAN ARKHAM KNIGHT</h4>
+            <img class="img" src="../img/PLAYSTATION/batman arkham knight.jpeg" alt="sin imagen"><h4 class=" letraVJ">BATMAN ARKHAM KNIGHT</h4>
            </div> 
            <div class="col-md-8 col-sm-12">
-            <h2>Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Batman: Arkham Knight es un videojuego de acción-aventura y mundo abierto desarrollado por Rocksteady Studios y lanzado por Warner Bros. 
                 Interactive Entertainment para las consolas PlayStation 4, PlayStation 3 y Microsoft Windows.  Basado en el superhéroe de DC Comics Batman, 
                 es el sucesor del videojuego de 2013 Batman: Arkham Origins, y el cuarto juego principal 
@@ -78,21 +78,21 @@
         <br>
         <div class="row">
             <div class="col-md-4 col-sm-12"><br>
-                <H2>Plataformas</H2>
-                <p>° PlayStation 4 </p>
-                <P>° PlayStation 3 </P>
+                <H2 class=" letraVJ">Plataformas</H2>
+                <p class=" letraVJ">° PlayStation 4 </p>
+                <P class=" letraVJ">° PlayStation 3 </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="c letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=L63rDlpJ3_o" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png" alt="youtube" class="logoY"></a>
             </div>
             <div class="col-md-8 col-sm-12"><br><br>
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar " ><a href="https://store.playstation.com/es-cl/product/UP1018-CUSA00133_00-BATMANARKHAMKNHT?gclid=Cj0KCQjwt_qgBhDFARIsABcDjOfOLIopViOAxLGw5ixfwnKsifY-slwBNczpP57PHfdhNGfld0SYGbwaAmpoEALw_wcB&gclsrc=aw.ds" target="_blank">
                     <img src="../img/PLAYSTATION/logoplay.jpg" alt="Juego Play" class="logoY"></a></p>
             </div>
         </div>
         <br><br><br><div class="row">
-            <div class="col"><form action="/action_page.php">
+            <div class="col-md-12"><form action="/action_page.php">
                 <textarea class="cu1" name="message" rows="5" cols="140"></textarea>
                 
                 <input type="submit" value="Enviar" class="btn btn-danger , cu1"  >
