--- a/PROYECTO SEMESTRAL/Exclusivo Play/BIOMUTANT.HTML
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/BIOMUTANT.HTML
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJP">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PLAYSTATION/biomutant.jpeg" alt="sin imagen"><h2>BIOMUTANT</h2>
+            <img class="img" src="../img/PLAYSTATION/biomutant.jpeg" alt="sin imagen"><h2 class=" letraVJ">BIOMUTANT</h2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Biomutant es un juego de rol de acción ambientado en un entorno de mundo abierto y
                 jugado desde una perspectiva en tercera persona en el que el jugador toma el control de un guerrero mamífero en
                 un mundo lleno de animales mutados. Los jugadores personalizan su personaje, incluida la longitud, la forma y el grosor del cuerpo,
@@ -86,15 +86,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° PlayStation 5 </p>
-                <P>° PlayStation 4 </P>
+                <H2 class=" letraVJ">Plataformas</H2><br>
+                <p class=" letraVJ">° PlayStation 5 </p>
+                <P class=" letraVJ">° PlayStation 4 </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class=" letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=dOGSkl3o8uI" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar " ><a href="https://www.playstation.com/es-cl/games/biomutant/" target="_blank">
                     <img src="../img/PLAYSTATION/logoplay.jpg" alt="Juego Play" class="logoY"></a></p>
             </div>
