--- a/PROYECTO SEMESTRAL/Exclusivo Play/CHRONOS BEFORE THE ASHES.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/CHRONOS BEFORE THE ASHES.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJP">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PLAYSTATION/chronos before the ashes.jpeg" alt="sin imagen"><h4>CHRONOS BEFORE THE ASH</h4>
+            <img class="img" src="../img/PLAYSTATION/chronos before the ashes.jpeg" alt="sin imagen"><h4 class="letraVJ">CHRONOS BEFORE THE ASH</h4>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Chronos: Before the Ashes es un juego de rol atmosférico que narra la búsqueda de toda
                  la vida de un héroe para salvar su tierra natal de un gran mal. Hazte más sabio, más
                   fuerte y más poderoso a medida que exploras las profundidades del misterioso laberinto
@@ -83,15 +83,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° PlayStation 4 </p>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° PlayStation 4 </p>
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=Z0l_3rKyf9U" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar " ><a href="https://store.playstation.com/es-ar/product/UP4389-CUSA15174_00-CHRONOSUS0000000" target="_blank">
                     <img src="../img/PLAYSTATION/logoplay.jpg" alt="Juego Play" class="logoY"></a></p>
             </div>
