--- a/PROYECTO SEMESTRAL/Exclusivo Play/GHOST OF TSUSHIMA.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/GHOST OF TSUSHIMA.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJP";>
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PLAYSTATION/ghost os tsushima.jpeg" alt="sin imagen"><h2>GHOST OS TSUSHIMA</h2>
+            <img class="img" src="../img/PLAYSTATION/ghost os tsushima.jpeg" alt="sin imagen"><h2 class="letraVJ">GHOST OS TSUSHIMA</h2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Ghost of Tsushima es un videojuego de acción-aventura desarrollado por Sucker Punch Productions y
                  publicado por Sony Interactive Entertainment para PlayStation 4 y PlayStation 5. Con un mundo abierto para que los jugadores exploren
                  , el juego gira en torno al último samurái en la isla de Tsushima durante la primera invasión mongola de Japón. El lanzamiento del juego
@@ -82,15 +82,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° PlayStation 5 </p>
-                <P>° PlayStation 4 </P>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° PlayStation 5 </p>
+                <P class="letraVJ">° PlayStation 4 </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=jPeyWo1fWRw" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar " ><a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjCm4SX3ff9AhUaNpEKHQMCCn4YABAAGgJjZQ&ohost=www.google.com&cid=CAESauD2bHLH-JZt8DPbythp9hXaCy7DwHnbV9zQxhj2V5Az7rq95UVIq06jimlqeIkV6jsqpuB6AfunUl3O5JLvGCaudZLrQgD6CUZPU5RTVPzLNF0sVbIogT5ItAX6U-nSaJfpQyDI63qDWvo&sig=AOD64_0lvLiWbUzD50etFxAttiDrLmlPEQ&q&adurl&ved=2ahUKEwiV9_yW3ff9AhVzELkGHT3qAr4Q0Qx6BAgJEAE" target="_blank">
                     <img src="../img/PLAYSTATION/logoplay.jpg" alt="Juego Play" class="logoY"></a></p>
             </div>
