--- a/PROYECTO SEMESTRAL/Exclusivo Play/HORIZON FORBIDES WEST.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/HORIZON FORBIDES WEST.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJP">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PLAYSTATION/horizon forbides west.jpeg" alt="sin imagen"><h2>HORIZON FORBIDES WEST</h2>
+            <img class="img" src="../img/PLAYSTATION/horizon forbides west.jpeg" alt="sin imagen"><h2 class="letraVJ">HORIZON FORBIDES WEST</h2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Horizon Forbidden West (también Horizon II por el pequeño número en el logo) es un videojuego de rol de acción, aventura y mundo abierto desarrollado por
                  Guerrilla Games y distribuido por Sony Interactive Entertainment, exclusivamente para PlayStation 4 y PlayStation 5. Es la secuela de Horizon Zero Dawn.
                   El juego está protagonizado por Aloy, una joven cazadora de la tribu Nora que viaja al Oeste Prohibido para investigar una misteriosa y mortífera plaga
@@ -82,15 +82,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° PlayStation 5 </p>
-                <P>° PlayStation 4 </P>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° PlayStation 5 </p>
+                <P class="letraVJ">° PlayStation 4 </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=p9a2SlsbV3w" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar " ><a href="https://www.playstation.com/es-cl/games/horizon-forbidden-west/?emcid=pa-co-421912&gclid=Cj0KCQjwt_qgBhDFARIsABcDjOdKVjyI5P_n5v_2mbSQVoBKGJWUwp-jI3_NLhDOvL94uv4yC6LK-c4aAqwsEALw_wcB&gclsrc=aw.ds" target="_blank">
                     <img src="../img/PLAYSTATION/logoplay.jpg" alt="Juego Play" class="logoY"></a></p>
             </div>
