--- a/PROYECTO SEMESTRAL/Exclusivo Play/HORIZON ZERO DAWN.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/HORIZON ZERO DAWN.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJP">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <a><img class="img" src="../img/PLAYSTATION/horizon zero dawn.jpeg" alt="sin imagen"></a><h2>HORIZON ZERO DAWN</h2>
+            <a><img class="img" src="../img/PLAYSTATION/horizon zero dawn.jpeg" alt="sin imagen"></a><h2 class="letraVJ">HORIZON ZERO DAWN</h2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Horizon Zero Dawn es un videojuego de acción, aventura y de mundo abierto desarrollado por Guerrilla Games y distribuido por Sony Interactive Entertainment
                 para PlayStation 4 y Microsoft Windows. Es la primera propiedad intelectual de Guerrilla Games desde la serie Killzone en 2004 y se anunció por primera vez en el 
                 E3 2015.El juego está protagonizado por Aloy, una guerrera de la tribu de los Nora y está ambientado en un futuro post-apocalíptico donde las máquinas son la raza 
@@ -81,15 +81,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° PlayStation 5 </p>
-                <P>° PlayStation 4 </P>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° PlayStation 5 </p>
+                <P class="letraVJ">° PlayStation 4 </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=_BvZvkT5QHw" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar " ><a href="https://store.playstation.com/es-cl/product/UP9000-CUSA10237_00-HRZCE00000000000" target="_blank">
                     <img src="../img/PLAYSTATION/logoplay.jpg" alt="Juego Play" class="logoY"></a></p>
             </div>
