--- a/PROYECTO SEMESTRAL/Exclusivo Play/MAFIA II.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/MAFIA II.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJP">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PLAYSTATION/mafia ll.jpeg" alt="sin imagen"><h2>MAFIA II</h2>
+            <img class="img" src="../img/PLAYSTATION/mafia ll.jpeg" alt="sin imagen"><h2 class="letraVJ">MAFIA II</h2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Mafia II: Definitive Edition es una aventura de acción a cargo de Hangar 13 y 2K Games 
                  PlayStation 4 , una remasterización de la entrega original en la que seguimos la historia de la mafia de 
                  los años 40 en Empire Bay, Nueva York. Vive como un gánster en la edad de oro del crimen organizado de los EE. UU. 
@@ -80,14 +80,14 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <P>° PlayStation 4 </P>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <P class="letraVJ">° PlayStation 4 </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=wHoqwphzhzc" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar " ><a href="https://store.playstation.com/es-es/product/EP1001-CUSA17761_00-MAFIATWOREMASTER" target="_blank">
                     <img src="../img/PLAYSTATION/logoplay.jpg" alt="Juego Play" class="logoY"></a></p>
             </div>
