--- a/PROYECTO SEMESTRAL/Exclusivo Play/ZOMBIE DRIVER.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/ZOMBIE DRIVER.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJP">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PLAYSTATION/zombie driver.jpeg" alt="sin imagen"><h2>ZOMBIE DRIVER</h2>
+            <img class="img" src="../img/PLAYSTATION/zombie driver.jpeg" alt="sin imagen"><h2 class="letraVJ">ZOMBIE DRIVER</h2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Una mezcla excéntrica de coches, velocidades, explosiones, sangre y zombis. Lucha en campaña épica o ponte a prueba en el modo 
                 Carnicería o Carrera Sangrienta. Enfréntate a los grandes jefes, rescata a la gente, conduce vehículos como bulldozer, coche de 
                 bomberos o tanque y destruye todo en el camino.
@@ -78,15 +78,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <P>° PlayStation 4 </P>
-                <P>° PlayStation 3 </P>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <P class="letraVJ">° PlayStation 4 </P>
+                <P class="letraVJ">° PlayStation 3 </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=RXYr5D7UHRs" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar " ><a href="https://store.playstation.com/es-ni/product/UP4380-CUSA19206_00-9035241793505542" target="_blank">
                     <img src="../img/PLAYSTATION/logoplay.jpg" alt="Juego Play" class="logoY"></a></p>
             </div>
