--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/A PLAGUE TALE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/A PLAGUE TALE.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJX">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/A PLAGUE TALE.jpeg" alt="sin imagen"><H2>A PLAGUE TALE</H2>
+            <img class="img" src="../img/XBOX/A PLAGUE TALE.jpeg" alt="sin imagen"><H2 class=" letraVJ">A PLAGUE TALE</H2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">En A Plague Tale: Innocence, el jugador toma el control de Amicia de Rune desde una perspectiva en tercera persona, con una jugabilidad centrada en el sigilo y la resolución de puzles.
                  Durante gran parte del juego, el jugador tiene que ocultarse y evitar encuentros hostiles con los enemigos ya que estos pueden matar a Amicia instantáneamente. Principalmente, Amicia se tiene que enfrentar a soldados de la Inquisición francesa,
                   pero también soldados ingleses y aldeanos de la región. Amicia está equipada con una honda, con la que puede lanzar piedras para romper cadenas, crear distracciones o aturdir a los enemigos el tiempo suficiente para que hordas de ratas les ataquen. También es posible matar a los enemigos si Amicia lanza una piedra en la cabeza, si esta está desprotegida. </p>
@@ -75,15 +75,15 @@
             <br>
         <div class="row">
             <div class="col-md-4 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° XBOX ONE </p>
-                <p>° XBOX SERIES </p>
+                <H2 class=" letraVJ">Plataformas</H2><br>
+                <p class=" letraVJ">° XBOX ONE </p>
+                <p class=" letraVJ">° XBOX SERIES </p>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class=" letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=gjIb9dQgUF0" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-8 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br><br>
                 <p class="centrar" ><a href="https://www.xbox.com/es-cl/games/store/a-plague-tale-innocence/BQ2NNLQPS8RS" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
