--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS 5.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS 5.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJX">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/gears5.jfif" alt="sin imagen"><H2>GEARS 5</H2>
+            <img class="img" src="../img/XBOX/gears5.jfif" alt="sin imagen"><H2 class=" letraVJ">GEARS 5</H2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ"> Gears 5 es la séptima entrega de la saga Gears of War. Es un videojuego de género shooter en tercera persona, desarrollado por The Coalition y publicado por Microsoft Studios.
                  Se estrenó el 10 de septiembre de 2019 para Xbox One y Windows 10 y el 10 de noviembre de 2020 para Xbox Series X y Series S. Fue anunciado oficialmente durante la conferencia de prensa de Xbox en la E3 de 2018.
                  Tras los eventos de Gears of War 4, el mundo se está desmoronando. La dependencia de la tecnología de los humanos se ha convertido en su caída y los enemigos se están uniendo para eliminar a todos los sobrevivientes.
@@ -77,15 +77,15 @@
         <br>
         <div class="row">
             <div class="col-md-4 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° XBOX SERIES </p> 
-                <P>° XBOX ONE </P>
+                <H2 class=" letraVJ">Plataformas</H2><br>
+                <p class=" letraVJ">° XBOX SERIES </p> 
+                <P class=" letraVJ">° XBOX ONE </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class=" letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=yQKwkXlCLx4" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-8 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br><br>
                 <p class="centrar" ><a href="https://www.xbox.com/es-cl/games/store/gears-5/C2KDNLT2H7DM" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
