--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS OF WAR 4.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS OF WAR 4.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJX">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/GEARS OF WAR 4.jpg" alt="sin imagen"><H2>GEARS OF WAR 4</H2>
+            <img class="img" src="../img/XBOX/GEARS OF WAR 4.jpg" alt="sin imagen"><H2 class=" letraVJ">GEARS OF WAR 4</H2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Han pasado 25 años desde que el Arma Desmanteladora de Imulsión creada por Adam Jonathon Fenix fuera utilizada con el fin de erradicar la Pandemia Lambent,
                  a las hordas de los Locust y terminara por evaporar toda la Imulsión presente en el planeta Sera. Tras este evento, la humanidad fue forzada a buscar nuevas formas de supervivencia después de tener que dejar de depender de la Imulsión, 
                  el combustible fósil del planeta el cual prácticamente dejó de existir. Pero a consecuencia del uso del arma desmanteladora de Imulsión, el planeta entró en un estado de cataclismo climático en la forma de poderosos vendavales conocidos simplemente como 
@@ -78,15 +78,15 @@
         <br>
         <div class="row">
             <div class="col-md-4 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° XBOX SERIES </p> 
-                <P>° XBOX ONE </P>
+                <H2 class=" letraVJ">Plataformas</H2><br>
+                <p class=" letraVJ">° XBOX SERIES </p> 
+                <P class=" letraVJ">° XBOX ONE </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class=" letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=XrfVfRV0zSg" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-8 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br><br>
                 <p class="centrar" ><a href="https://www.xbox.com/es-CL/games/store/gears-of-war-4/9nblggh4pbbm" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
