--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/HADES.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/HADES.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJX">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/HADES.jpeg" alt="sin imagen"><H2>HADES</H2>
+            <img class="img" src="../img/XBOX/HADES.jpeg" alt="sin imagen"><H2 class=" letraVJ">HADES</H2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Hades es un juego de rol de acción roguelike desarrollado y publicado por Supergiant Games. El juego fue lanzado para Microsoft Windows, 
                 Xbox One y Series X el 17 de septiembre de 2020, que siguió a un lanzamiento de acceso anticipado en diciembre de 2018. Los jugadores controlan a Zagreus,
                  el hijo de Hades, mientras intenta escapar del Inframundo para llegar al Monte Olimpo, en ocasiones con la ayuda de los obsequios que le otorgan los otros olímpicos. 
@@ -78,15 +78,15 @@
         <br>
         <div class="row">
             <div class="col-md-4 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° XBOX SERIES </p> 
-                <P>° XBOX ONE </P>
+                <H2 class=" letraVJ">Plataformas</H2><br>
+                <p class=" letraVJ">° XBOX SERIES </p> 
+                <P class=" letraVJ">° XBOX ONE </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class=" letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=91t0ha9x0AE" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-8 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br><br>
                 <p class="centrar" ><a href="https://www.xbox.com/es-CL/games/store/hades/9p8dl6w0jbb8" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
