--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/HALO INFINITE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/HALO INFINITE.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJX">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/HALO INFINITE.jpg" alt="sin imagen"><H2>HALO INFINITE</H2>
+            <img class="img" src="../img/XBOX/HALO INFINITE.jpg" alt="sin imagen"><H2 class=" letraVJ">HALO INFINITE</H2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Halo Infinite es un videojuego de disparos en primera persona siendo la secuela de Halo 5: Guardians y Halo Wars 2.
                  Así como un reinicio espiritual de la saga. Fue revelado en la E3 de 2018 y originalmente sería lanzado al mercado junto con la Xbox Series X a finales de 2020 estando disponible también para Xbox One y Windows 10.
                   Sin embargo, en Agosto de 2020 343 Industries anunció que el juego sería retrasado, siendo el 8 de Diciembre de 2021 la fecha de lanzamiento. 
@@ -78,15 +78,15 @@
         <br>
         <div class="row">
             <div class="col-md-4 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° XBOX SERIES </p> 
-                <P>° XBOX ONE </P>
+                <H2 class=" letraVJ">Plataformas</H2><br>
+                <p class=" letraVJ">° XBOX SERIES </p> 
+                <P class=" letraVJ">° XBOX ONE </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class=" letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=rFh2i4AlPD4" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-8 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br><br>
                 <p class="centrar" ><a href="https://www.xbox.com/es-cl/games/store/halo-infinite/9PP5G1F0C2B6" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
