--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/MINECRAFT.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/MINECRAFT.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJX">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -64,10 +64,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/MINECRAFT.jpg" alt="sin imagen"><H2>MINECRAFT</H2>
+            <img class="img" src="../img/XBOX/MINECRAFT.jpg" alt="sin imagen"><H2 class=" letraVJ">MINECRAFT</H2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Minecraft es un videojuego sandbox enfocado en permitirle al jugador explorar y modificar un mundo generado dinámicamente hecho de bloques de un metro cúbico.
                  Es mantenido por Mojang Studios, que forma parte de Xbox Game Studios, que a su vez es parte de Microsoft. Desde su creación, Minecraft fue desarrollado casi exclusivamente por Notch hasta que Jens "Jeb" Bergensten
                   comenzó a trabajar en él y desde entonces se ha convertido en el responsable de su desarrollo. Cuenta con música de Daniel "C418" Rosenfeld y de Lena Raine y cuadros de Kristoffer Zetterstrand. La versión inicial, conocida actualmente como Minecraft Classic, 
@@ -78,16 +78,16 @@
         <br>
         <div class="row">
             <div class="col-md-4 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° XBOX SERIES </p>
-                <p>° XBOX ONE</p>
-                <P>° XBOX 360</P>
+                <H2 class=" letraVJ">Plataformas</H2><br>
+                <p class=" letraVJ">° XBOX SERIES </p>
+                <p class=" letraVJ">° XBOX ONE</p>
+                <P class=" letraVJ">° XBOX 360</P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class=" letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=MmB9b5njVbA" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-8 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br><br>
                 <p class="centrar" ><a href="https://www.xbox.com/es-ES/games/store/minecraft/9MVXMVT8ZKWC" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
