--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/PAYDAY 2.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/PAYDAY 2.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJX">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -56,7 +56,8 @@
               <button class="btn btn-outline-success my-2 my-sm-0 , cuX1" type="submit"><img src="../img/CURSOR/lupa.png"  alt="sin imagen" class="img"></button>
             </form>
           </div>
-        </nav></div>
+        </nav>
+      </div>
 
     <div class="container">
         
@@ -64,10 +65,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/PAYDAY 2.jpeg" alt="sin imagen"><H2>PAYDAY 2</H2>
+            <img class="img" src="../img/XBOX/PAYDAY 2.jpeg" alt="sin imagen"><H2 class=" letraVJ">PAYDAY 2</H2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">PAYDAY 2 es un juego de disparos cooperativo de primera persona con elementos RPG. Hasta 4 jugadores pueden cooperar en un atraco. El juego base tiene 12 atracos,
                  varios los cuales tienen lugar en múltiples días y lugares. Overkill lanzaría nuevos atracos gratuitos o en DLCs de paga, aumentando el número de sitios de atracos únicos a más de 30.
                  Similar al PAYDAY original, los atracos tienen varios eventos dinámicos. Por ejemplo, los guardias pueden tener distintas rutas de patrullaje, las cajas fuertes pueden estar en diferentes sitios y la cantidad de dinero y botín puede ser diferente.
@@ -77,16 +78,16 @@
         <br>
         <div class="row">
             <div class="col-md-4 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° XBOX SERIES </p>
-                <p>° XBOX ONE</p>
-                <P>° XBOX 360</P>
+                <H2 class=" letraVJ">Plataformas</H2><br>
+                <p class=" letraVJ">° XBOX SERIES </p>
+                <p class=" letraVJ">° XBOX ONE</p>
+                <P class=" letraVJ">° XBOX 360</P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class=" letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=Z2tmHMIA1sU" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-8 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br><br>
                 <p class="centrar" ><a href="https://www.xbox.com/es-CL/games/store/payday-2-crimewave-edition/c2z9d406g0kq" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
