--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/PROTOTYPE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/PROTOTYPE.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJX">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -56,18 +56,17 @@
               <button class="btn btn-outline-success my-2 my-sm-0 , cuX1" type="submit"><img src="../img/CURSOR/lupa.png"  alt="sin imagen" class="img"></button>
             </form>
           </div>
-        </nav></div>
-
+        </nav>
+      </div>
     <div class="container">
-        
         <br><br>
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/PROTOTYPE.jpeg" alt="sin imagen"><H2>PROTOTYPE</H2>
+            <img class="img" src="../img/XBOX/PROTOTYPE.jpeg" alt="sin imagen"><H2 class=" letraVJ">PROTOTYPE</H2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">El juego se desarrolla en New York City. Se narran los hechos de como un virus infecta a las personas y los intentos militares para poner fin a la misma. El protagonista de la historia se llama Alex Mercer, 
                 que ha enemiga de absorción de cambiar de forma y habilidades. Él puede conservar los recuerdos, las experiencias, la biomasa y las formas físicas de los enemigos que se consumen. 
                 Alex también puede cambiar la forma de partes de su cuerpo en formas más especializadas de las armas de ataque o defensa. Todo esto en conjunto tienen el propósito de dar a los jugadores múltiples maneras de completar sus objetivos. </p>
@@ -76,16 +75,16 @@
         <br>
         <div class="row">
             <div class="col-md-4 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° XBOX SERIES </p>
-                <p>° XBOX ONE</p>
-                <P>° XBOX 360</P>
+                <H2 class=" letraVJ">Plataformas</H2><br>
+                <p class=" letraVJ">° XBOX SERIES </p>
+                <p class=" letraVJ">° XBOX ONE</p>
+                <P class=" letraVJ">° XBOX 360</P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class=" letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=HxyM_GxFwJ0" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-8 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://www.xbox.com/en-US/games/store/prototype/BTB6374NZGV3" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
@@ -98,9 +97,6 @@
               </form><br><br><br><br>
             </div>
         </div>
-
-
-
 
 
 
