--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/deadrising.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/deadrising.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJX">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -63,10 +63,10 @@
         <br><br>
         <div class="row">
            <div class="col-md-4">
-            <img class="img" src="../img/XBOX/DEAD RISING.jfif" alt="sin imagen"><H2>DEAD RISING</H2>
+            <img class="img" src="../img/XBOX/DEAD RISING.jfif" alt="sin imagen"><H2 class=" letraVJ">DEAD RISING</H2>
            </div> 
            <div class="col-md-8">
-            <h2>Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Dead Rising es un videojuego de terror de acción-aventura, mundo abierto desarrollado por Capcom y producido por Keiji Inafune.
                  Fue lanzado el 8 de agosto de 2006 para la consola Xbox 360.  El juego fue un éxito comercial que fue introducido en la línea de Platinum Hits de Xbox 360 y un spin-off para teléfono móvil. 
                  La secuela llamada Dead Rising 2 fue desarrollada por Blue Castle Games en conjunto con varios desarrolladores anteriores de Dead Rising y lanzado en septiembre de 2010. La siguiente secuela es DEAD RISING 4 para XBOX ONE.
@@ -78,16 +78,16 @@
         <br><br>
         <div class="row">
             <div class="col-md-4">
-                <H2>Plataformas</H2><br>
-                <p>° XBOX SERIES </p>
-                <p>° XBOX ONE</p>
-                <P>° XBOX 360</P>
+                <H2 class=" letraVJ">Plataformas</H2><br>
+                <p class=" letraVJ">° XBOX SERIES </p>
+                <p class=" letraVJ">° XBOX ONE</p>
+                <P class=" letraVJ">° XBOX 360</P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class=" letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=YzuTDSnfbeU" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png" alt="youtube" class="logoY"></a>
             </div>
             <div class="col-md-8">
-                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br><br>
                 <p class="centrar" ><a href="https://www.xbox.com/es-CL/games/store/dead-rising/BZV7W98B3XN4/0001" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
